# nyukomatic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  cpp-linter.yml  dependabot-auto-merge.yml
assets/macosx/: MacOSXBundleInfo.plist.in  background.xcf  dmgsetup.scpt  icon.icns
assets/unix/: desktop.in
assets/windows/: resources.rc.in
cmake/: GitVersion.cmake  version.h.in
src/: compiler.cpp  compiler.h  default_text.h  emulator.h  logger.h  main.cpp  options.cpp  options.h  pentagon128.h  render.cpp  render.h  style.cpp  style.h  window.cpp  window.h
src/fonts/: font_iosevka.h  font_monaco.h
src/roms/: 128p0.h  128p1.h  48.h  trdos.h
